--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-
 [dependencies]
 log = { version = "0.4", default-features = false }
 esp-idf-svc = { version = "0.47.3", default-features = false }
+anyhow = "1"
+artnet_protocol = "0.4.2"
 
 [build-dependencies]
 embuild = "0.31.3"
